--- a/site/themes/bba/sass/04-pages/_home.scss
+++ b/site/themes/bba/sass/04-pages/_home.scss
@@ -1,3 +1,8 @@
+.body--home {
+  height: 100vh;
+  overflow: hidden;
+}
+
 .homepage-video__playlist {
 	display: none;
 }
